chore: add js-auth to rsc

--- a/examples/nextjs/src/app/page.module.css
+++ b/examples/nextjs/src/app/page.module.css
@@ -75,6 +75,8 @@
 
 .center {
   display: flex;
+  flex-direction: column;
+  gap: 2rem;
   justify-content: center;
   align-items: center;
   position: relative;
