chore: update nextjs example with links to middleware and api

--- a/examples/nextjs/src/app/page.module.css
+++ b/examples/nextjs/src/app/page.module.css
@@ -44,6 +44,7 @@
   grid-template-columns: repeat(4, minmax(25%, auto));
   max-width: 100%;
   width: var(--max-width);
+  gap: 12px;
 }
 
 .card {
